--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
+    <link rel="stylesheet" href="styles/architects.css">
 </head>
 
 <body>
-
+    <header>
+        <nav>
+            <h3>g3 architects</h3>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact us</li>
+                <li>Login</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
